KarRefinement v1.0-beta 1.16.5兼容